--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
+[project.optional-dependencies]
+dev = ["black", "mypy"]
+
 [project.scripts]
 prisoner = "prisoner.main:main"
